# iventory_vanity_backend

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
inventory/: factories.py  tests.py  urls.py
inventory/domain/: services.py
inventory/infrastructure/: models.py
inventory/migrations/: 0001_initial.py  0002_equipment_active.py
inventory/presentation/: serializers.py  views.py
inventory_vanity/: asgi.py  settings.py  urls.py  wsgi.py
